fixed weird spacing on phone kinda

--- a/projectStyles.css
+++ b/projectStyles.css
@@ -129,9 +129,3 @@ footer {
     align-items: center;
     display: flex;
 }
-
-@media (max-width: 800px) {
-    .projects {
-        flex-direction: column;
-    }
-}
